# django3-mysite

./: .gitignore  Pipfile  db.sqlite3  pyproject.toml  settings.json
mysite/: settings.py  urls.py
polls/: admin.py  apps.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
quickstart/: views.py
snippets/: models.py
snippets/migrations/: 0001_initial.py
